--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
 
   
   <!-- ✅ JSは必ず body の下に -->
+<script>
+
 form.addEventListener('submit', async (e) => {
   e.preventDefault();
 
@@ -38,3 +40,5 @@ form.addEventListener('submit', async (e) => {
     alert('送信失敗…');
   }
 });
+
+</script>
