--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@ form.addEventListener('submit', async (e) => {
   const userId = document.getElementById('userid').value;
   const messageText = document.getElementById('message').value;
 
-  const message = `<@${userId}> ${messageText}`;
+  const message =
+    ｛
+     allowed_mentions:`<@${userId}> ${messageText}`;
+  ｝
 
   const res = await fetch('/api/send', {
     method: 'POST',
@@ -32,6 +35,10 @@ form.addEventListener('submit', async (e) => {
     body: JSON.stringify({ message }),
   });
 
+   content: message,
+    allowed_mentions: {
+      users: [userId] 
+  
   if (res.ok) {
     alert('送信成功！');
   } else {
