--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@ form.addEventListener('submit', async (e) => {
   e.preventDefault();
 
   const userId = document.getElementById('userid').value;
-  const messageText = document.getElementById('message').value;
+  const messageText = document.getElementById('messageText').value;
 
-  const message = `<@${userId}> ${message}`;
+  const message = `<@${userId}> ${messageText}`;
 
   const res = await fetch('/api/send', {
     method: 'POST',
