--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,44 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>Discord 通知フォーム</title>
+  <title>Discord通知フォーム</title>
 </head>
 <body>
-  <h1>Discordにメッセージ送信</h1>
- 
+  <h1>メンション付きで送信</h1>
+
+  <form id="form">
+    <input type="text" id="userid" placeholder="メンションするユーザーID" required /><br><br>
+    <input type="text" id="message" placeholder="メッセージ" required /><br><br>
+    <button type="submit">送信</button>
   </form>
-<form id="form">
-  <input type="text" id="userid" placeholder="メンションするユーザーID" required />
-  <input type="text" id="message" placeholder="メッセージ" required />
-  <button type="submit">送信</button>
-</form>
 
-  
-  <!-- ✅ JSは必ず body の下に -->
-<script>
+  <script>
+    document.getElementById('form').addEventListener('submit', async (e) => {
+      e.preventDefault();
 
-form.addEventListener('submit', async (e) => {
-  e.preventDefault();
+      const userId = document.getElementById('userid').value.trim();
+      const message = document.getElementById('message').value.trim();
 
-  const userId = document.getElementById('userid').value;
-  const messageText = document.getElementById('messageText').value;
+      if (!userId || !message) {
+        alert('両方入力してください');
+        return;
+      }
 
-  const message = `<@${userId}> ${messageText}`;
+      const res = await fetch('/api/send', {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: JSON.stringify({ userId, message }),
+      });
 
-  const res = await fetch('/api/send', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ message }),
-  });
-
-  if (res.ok) {
-    alert('送信成功！');
-  } else {
-    alert('送信失敗…');
-  }
-});
-
-
-</script>
+      if (res.ok) {
+        alert('送信成功！');
+      } else {
+        const error = await res.json();
+        alert('送信失敗: ' + (error.details || error.error || '不明なエラー'));
+      }
+    });
+  </script>
+</body>
+</html>
